ds-139: fix form field icon spacing

--- a/packages/components/bolt-form/src/form.scss
+++ b/packages/components/bolt-form/src/form.scss
@@ -407,7 +407,7 @@ $bolt-input-transition: $bolt-transition;
   position: absolute;
   top: 1px;
   right: 1px;
-  padding-top: calc(0.35 * var(--bolt-spacing-y-medium) / 2);
+  padding-top: calc(0.35 * var(--bolt-spacing-y-medium));
   padding-right: var(--bolt-spacing-x-small);
   padding-bottom: calc(0.35 * var(--bolt-spacing-y-medium) / 2);
   padding-left: 0;
